ref: use CSS for spacing <br> should be avoided and non-breaking space have a specific use that is *not* styling

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -28,3 +28,13 @@ input {
 	font-family: 'courier new';
 	font-size: 16px;
 }
+
+label + label {
+	margin-left: 1ch;
+}
+
+#whitelistText,
+#blacklistText,
+small {
+	display: block;
+}
